properly fix truncation

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -197,8 +197,8 @@
         }
         .trending-title {
           font-size: 18px;
-          padding-bottom: 0px;
-          margin-bottom: 2px;
+          padding-bottom: 2px;
+          margin-bottom: 0px;
           display: block;
           margin-top: 7px;
           line-height: 15px;
